syntax = "proto3";
package protobuf;

message Control {
  float steer = 1;
  float brakeCmd = 2;
  float accelCmd = 3;
  int32 gear = 4;
}
