syntax = "proto3";
package protobuf;

message Wheel {
  float spinVel = 1;
}
